--- a/hero-section.css
+++ b/hero-section.css
@@ -83,6 +83,7 @@
     margin-top: 20px; /* Optional: Add margin to separate it from other content */
   }
   
+
   
   /* Layout adjustments for smaller screens */
   @media (max-width: 768px) {
@@ -100,10 +101,25 @@
     }
   
     /* Hide the profile picture on smaller screens */
-    .profile-pic {
-      display: none;
+    .mobile-profile-pic {
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      object-fit: scale-down;
+      margin-right: 3px;
+      margin-left: x;
+      margin-top: 10px; /* Add this line to lower the profile picture */
+      border: 5px solid #2F65A7; /* Add this line to set the border color */
+      box-shadow: #fff;
+      background-image:url('mg/me2.png');
+  
     }
 
+    .profile-pic{
+      display:none;
+
+  }
+*/
 
     
   }
@@ -112,6 +128,10 @@
   @media (min-width: 769px) {
     .profile-pic {
       display: block;
+    }
+
+    .mobile-profile-pic {
+      display: none;
     }
   }
 
